syntax = "proto3";

option java_package = "kr.pik.message";

message ResponseStatusMessage {
  bool isSuccess = 1;
  string message = 2;
}